Fix Scrollbar, Fix Locked Fighter Count & Update Builds

--- a/program/css/characterPorter.css
+++ b/program/css/characterPorter.css
@@ -5,6 +5,6 @@
     overflow-y: scroll;
     white-space: nowrap;
     margin-top: 5px;
-    height: calc(100vh - 230px);
+    height: calc(100vh - 250px);
     white-space: nowrap;
 }
